@@ -1,6 +1,14 @@
 StarSpan news
 $Id$
 
+# (10/30/07)
+Starting development on 1.0.xx series. See ChangeLog.
+
+# (10/19/07)
+StarSpan for Windows 0.2.0 with Large File support
+
+
+
 # (5/19/05)
 An experimental GUI for StarSpan has been released.
 
